Our Plants section added to the code base

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
           >
         </div>
       </nav>
+      <!-- Banner  -->
       <section class="banner">
         <div class="banner-info">
           <h1>
-            ALWAYS <span>FRESH<br />FLOWERS</span>
+            ALWAYS <span class="orange-span">FRESH<br />FLOWERS</span>
           </h1>
           <p>
             Indulge your senses with the beauty and fragrance of our fresh
@@ -59,7 +60,86 @@
         </figure>
       </section>
     </header>
-    <main></main>
+    <!-- Main Section -->
+    <main>
+      <!-- Our Plants Section -->
+      <section class="our-plants-container common-dimensions">
+        <h2 class="section-heading">
+          <span class="orange-span">Our</span> Plants
+        </h2>
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+        <div class="our-plants">
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="our-plant">
+            <figure class="our-plant-img">
+              <img src="./assets/sample-flower-image.png" alt="Lily Blossom" />
+            </figure>
+            <h5>Lily Blossom</h5>
+            <p>20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
