Flower shop section added to the code base

--- a/index.html
+++ b/index.html
@@ -139,6 +139,33 @@
           </div>
         </div>
       </section>
+      <!-- Flower Store Section -->
+      <section class="flower-store-container common-dimensions">
+        <figure class="flower-store-img">
+          <img src="./assets/flower-store.png" alt="Flower Store" />
+          <img class="badge" src="./assets/trusted-badge.png" alt="" />
+        </figure>
+        <div class="flower-store-info">
+          <h2 class="section-heading">Flower & Plants Lover</h2>
+          <ul>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
