Latest deals section added to the code base

--- a/index.html
+++ b/index.html
@@ -166,6 +166,41 @@
           </ul>
         </div>
       </section>
+      <!-- Latest Deals Section -->
+      <section class="latest-deals-container common-dimensions">
+        <div class="latest-deals-info">
+          <h2 class="section-heading">
+            <span class="orange-span">Latest</span> Deals
+          </h2>
+          <p class="latest-deals-descriptions">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+        <div class="latest-deals">
+          <div class="latest-deals-left">
+            <div class="latest-deal-bloom-container">
+              <div class="latest-deal-bloom">
+                <h3>60% Off | Bloom Plant</h3>
+                <h4>Shop Now</h4>
+              </div>
+            </div>
+            <div class="latest-deal-ana-container">
+              <div class="latest-deal-ana">
+                <h3>30% Off | Ana Plant</h3>
+                <h4>Shop Now</h4>
+              </div>
+            </div>
+          </div>
+          <div class="latest-deal-zabo-container">
+            <div class="latest-deal-zabo">
+              <h3>25% Off | Zabo Plant</h3>
+              <h4>Shop Now</h4>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
