Newslette section added to the code base

--- a/index.html
+++ b/index.html
@@ -141,8 +141,12 @@
       </section>
       <!-- Flower Store Section -->
       <section class="flower-store-container common-dimensions">
-        <figure class="flower-store-img">
-          <img src="./assets/flower-store.png" alt="Flower Store" />
+        <figure class="flower-store-img-container">
+          <img
+            class="flower-store-img"
+            src="./assets/flower-store.png"
+            alt="Flower Store"
+          />
           <img class="badge" src="./assets/trusted-badge.png" alt="" />
         </figure>
         <div class="flower-store-info">
@@ -198,6 +202,20 @@
               <h3>25% Off | Zabo Plant</h3>
               <h4>Shop Now</h4>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- Newsletter Section -->
+      <section class="newsletter-container">
+        <div class="newsletter">
+          <h2 class="section-heading">Join the colorful Bunch</h2>
+          <div class="newsletter-subscription">
+            <input
+              class="newsletter-email"
+              type="text"
+              placeholder="Write email"
+            />
+            <button class="btn-primary">Subscribe</button>
           </div>
         </div>
       </section>
